--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <h1>Day la header</h1>
+    </header>
     <section class="banner"></section>
     <section class="product"></section>
     <footer></footer>
