--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <header>
         <h1>Day la header</h1>
     </header>
-    <section class="banner"></section>
+    <section class="banner">
+        <h1>Day la banner</h1>
+    </section>
     <section class="product"></section>
     <footer></footer>
 
